Adds Coinbase Sans fonts and theme updates
Incorporates new woff2 font files for multiple weights.
Updates CSS to define font-face rules and theme variables for light/dark modes.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,66 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@font-face {
+    font-family: 'Coinbase Sans';
+    src: url('/src/assets/fonts/Coinbase_Sans-Extra_Light-web-1.32.woff2') format('woff2');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Coinbase Sans';
+    src: url('/src/assets/fonts/Coinbase_Sans-Light-web-1.32.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Coinbase Sans';
+    src: url('/src/assets/fonts/Coinbase_Sans-Regular-web-1.32.woff2') format('woff2');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Coinbase Sans';
+    src: url('/src/assets/fonts/Coinbase_Sans-Medium-web-1.32.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Coinbase Sans';
+    src: url('/src/assets/fonts/Coinbase_Sans-Bold-web-1.32.woff2') format('woff2');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+
+@theme {
+    --font-sans: 'Coinbase Sans', sans-serif;
+    --font-size: 16px;
+    --color-primary: oklch(50.82% 0.247 275.78);
+    --color-success: oklch(72.91% 0.146 144.82);
+    --color-error: oklch(0.65 0.21 27.59);
+    --color-text-primary: oklch(26.24% 0.044 264.91);
+    --color-text-secondary: oklch(54.89% 0.010 271.24);
+    --color-text-tertiary: oklch(80.10% 0.002 247.84);
+    --color-background: oklch(100.00% 0.000 0);
+
+}
+
+.dark {
+    --color-primary: oklch(72.5% 0.247 275.78);
+    --color-success: oklch(64% 0.146 144.82);
+    --color-error: oklch(70% 0.21 27.59);
+    --color-text-primary: oklch(90% 0.044 264.91);
+    --color-text-secondary: oklch(70% 0.010 271.24);
+    --color-text-tertiary: oklch(50% 0.002 247.84);
+    --color-background: oklch(17% 0.02 264);
+}
